@@ -2,10 +2,7 @@ package ec.edu.ups.Backend.controller;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -14,23 +11,29 @@ import java.util.Map;
 
 @RestController
 @RequestMapping("/api/shell")
+
 public class ShellController {
-
-    @PostMapping
-    public ResponseEntity<String> executeCommand(@RequestBody Map<String, String> request) {
-        String command = request.get("command");
-
+    @GetMapping("/logs")
+    public ResponseEntity<String> getLogs(@RequestParam String containerName) {
         try {
-            Process process = Runtime.getRuntime().exec(command);
+            System.out.println("Obteniendo logs de: " + containerName);
+            System.out.println("Solicitando logs del contenedor: " + containerName);
+            Process process = new ProcessBuilder("docker", "logs", "--tail", "100", containerName)
+                    .redirectErrorStream(true)
+                    .start();
+
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             StringBuilder output = new StringBuilder();
             String line;
+
             while ((line = reader.readLine()) != null) {
                 output.append(line).append("\n");
             }
+
             return ResponseEntity.ok(output.toString());
         } catch (IOException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error ejecutando el comando");
+            e.printStackTrace(); // Agrega esto para ver el error exacto
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error al obtener logs: " + e.getMessage());
         }
     }
 }
